--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Rock, papers, cut</title>
 </head>
 <body>
-    
+    <div class = "userInput">
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+    </div>
+
+    <div class = "displayOutput">
+        <h2>Winner!</h2>
+    </div>
+
+    <div class="score">
+        <p>User score:</p>
+        <p>Computer score:</p>
+    </div>
 </body>
 </html>
