--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <button>Paper</button>
         <button>Scissors</button>
     </div>
+    
+    <h4>Your choice:</h4>
+    <h4>Computer choice:</h4>
 
     <div class = "displayOutput">
         <h2>Winner!</h2>
